parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> include_statement
Rule 5     statement -> using_namespace
Rule 6     statement -> declaration
Rule 7     statement -> assignment
Rule 8     statement -> cout_statement
Rule 9     statement -> cin_statement
Rule 10    statement -> if_statement
Rule 11    statement -> while_statement
Rule 12    statement -> for_statement
Rule 13    statement -> function_definition
Rule 14    statement -> function_call
Rule 15    statement -> return_statement
Rule 16    statement -> expression SEMICOLON
Rule 17    include_statement -> INCLUDE LESS IOSTREAM GREATER
Rule 18    using_namespace -> USING NAMESPACE STD SEMICOLON
Rule 19    declaration -> type declarator_list SEMICOLON
Rule 20    declarator_list -> declarator
Rule 21    declarator_list -> declarator COMMA declarator_list
Rule 22    declarator -> IDENTIFIER
Rule 23    declarator -> IDENTIFIER EQUALS expression
Rule 24    type -> INT
Rule 25    type -> FLOAT
Rule 26    type -> STRING
Rule 27    type -> VOID
Rule 28    assignment -> IDENTIFIER EQUALS expression SEMICOLON
Rule 29    cout_statement -> COUT LEFTSHIFT cout_args SEMICOLON
Rule 30    cout_args -> expression
Rule 31    cout_args -> cout_args LEFTSHIFT expression
Rule 32    cin_statement -> CIN RIGHTSHIFT cin_args SEMICOLON
Rule 33    cin_args -> IDENTIFIER
Rule 34    cin_args -> IDENTIFIER RIGHTSHIFT cin_args
Rule 35    if_statement -> IF LPAREN expression RPAREN compound_statement
Rule 36    if_statement -> IF LPAREN expression RPAREN compound_statement ELSE compound_statement
Rule 37    while_statement -> WHILE LPAREN expression RPAREN compound_statement
Rule 38    for_statement -> FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_statement
Rule 39    for_statement -> FOR LPAREN declaration expression SEMICOLON expression RPAREN compound_statement
Rule 40    compound_statement -> LBRACE statements RBRACE
Rule 41    function_definition -> type IDENTIFIER LPAREN parameters RPAREN compound_statement
Rule 42    parameters -> <empty>
Rule 43    parameters -> type IDENTIFIER
Rule 44    parameters -> type IDENTIFIER COMMA parameters
Rule 45    function_call -> IDENTIFIER LPAREN arguments RPAREN SEMICOLON
Rule 46    arguments -> <empty>
Rule 47    arguments -> expression
Rule 48    arguments -> expression COMMA arguments
Rule 49    return_statement -> RETURN expression SEMICOLON
Rule 50    expression -> IDENTIFIER
Rule 51    expression -> NUMBER
Rule 52    expression -> STRING_LITERAL
Rule 53    expression -> expression PLUS expression
Rule 54    expression -> expression MINUS expression
Rule 55    expression -> expression TIMES expression
Rule 56    expression -> expression DIVIDE expression
Rule 57    expression -> expression LESS expression
Rule 58    expression -> expression GREATER expression
Rule 59    expression -> expression LESSEQUAL expression
Rule 60    expression -> expression GREATEREQUAL expression
Rule 61    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

CIN                  : 32
COMMA                : 21 44 48
COUT                 : 29
DIVIDE               : 56
ELSE                 : 36
EQUALS               : 23 28
FLOAT                : 25
FOR                  : 38 39
GREATER              : 17 58
GREATEREQUAL         : 60
IDENTIFIER           : 22 23 28 33 34 41 43 44 45 50
IF                   : 35 36
INCLUDE              : 17
INT                  : 24
IOSTREAM             : 17
LBRACE               : 40
LEFTSHIFT            : 29 31
LESS                 : 17 57
LESSEQUAL            : 59
LPAREN               : 35 36 37 38 39 41 45 61
MINUS                : 54
NAMESPACE            : 18
NUMBER               : 51
PLUS                 : 53
RBRACE               : 40
RETURN               : 49
RIGHTSHIFT           : 32 34
RPAREN               : 35 36 37 38 39 41 45 61
SEMICOLON            : 16 18 19 28 29 32 38 38 39 45 49
STD                  : 18
STRING               : 26
STRING_LITERAL       : 52
TIMES                : 55
USING                : 18
VOID                 : 27
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

arguments            : 45 48
assignment           : 7
cin_args             : 32 34
cin_statement        : 9
compound_statement   : 35 36 36 37 38 39 41
cout_args            : 29 31
cout_statement       : 8
declaration          : 6 39
declarator           : 20 21
declarator_list      : 19 21
expression           : 16 23 28 30 31 35 36 37 38 38 38 39 39 47 48 49 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61
for_statement        : 12
function_call        : 14
function_definition  : 13
if_statement         : 10
include_statement    : 4
parameters           : 41 44
program              : 0
return_statement     : 15
statement            : 2 3
statements           : 1 3 40
type                 : 19 41 43 44
using_namespace      : 5
while_statement      : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . include_statement
    (5) statement -> . using_namespace
    (6) statement -> . declaration
    (7) statement -> . assignment
    (8) statement -> . cout_statement
    (9) statement -> . cin_statement
    (10) statement -> . if_statement
    (11) statement -> . while_statement
    (12) statement -> . for_statement
    (13) statement -> . function_definition
    (14) statement -> . function_call
    (15) statement -> . return_statement
    (16) statement -> . expression SEMICOLON
    (17) include_statement -> . INCLUDE LESS IOSTREAM GREATER
    (18) using_namespace -> . USING NAMESPACE STD SEMICOLON
    (19) declaration -> . type declarator_list SEMICOLON
    (28) assignment -> . IDENTIFIER EQUALS expression SEMICOLON
    (29) cout_statement -> . COUT LEFTSHIFT cout_args SEMICOLON
    (32) cin_statement -> . CIN RIGHTSHIFT cin_args SEMICOLON
    (35) if_statement -> . IF LPAREN expression RPAREN compound_statement
    (36) if_statement -> . IF LPAREN expression RPAREN compound_statement ELSE compound_statement
    (37) while_statement -> . WHILE LPAREN expression RPAREN compound_statement
    (38) for_statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_statement
    (39) for_statement -> . FOR LPAREN declaration expression SEMICOLON expression RPAREN compound_statement
    (41) function_definition -> . type IDENTIFIER LPAREN parameters RPAREN compound_statement
    (45) function_call -> . IDENTIFIER LPAREN arguments RPAREN SEMICOLON
    (49) return_statement -> . RETURN expression SEMICOLON
    (50) expression -> . IDENTIFIER
    (51) expression -> . NUMBER
    (52) expression -> . STRING_LITERAL
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression TIMES expression
    (56) expression -> . expression DIVIDE expression
    (57) expression -> . expression LESS expression
    (58) expression -> . expression GREATER expression
    (59) expression -> . expression LESSEQUAL expression
    (60) expression -> . expression GREATEREQUAL expression
    (61) expression -> . LPAREN expression RPAREN
    (24) type -> . INT
    (25) type -> . FLOAT
    (26) type -> . STRING
    (27) type -> . VOID

    INCLUDE         shift and go to state 17
    USING           shift and go to state 18
    IDENTIFIER      shift and go to state 20
    COUT            shift and go to state 21
    CIN             shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 25
    FOR             shift and go to state 26
    RETURN          shift and go to state 27
    NUMBER          shift and go to state 28
    STRING_LITERAL  shift and go to state 29
    LPAREN          shift and go to state 24
    INT             shift and go to state 30
    FLOAT           shift and go to state 31
    STRING          shift and go to state 32
    VOID            shift and go to state 33

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    include_statement              shift and go to state 4
    using_namespace                shift and go to state 5
    declaration                    shift and go to state 6
    assignment                     shift and go to state 7
    cout_statement                 shift and go to state 8
    cin_statement                  shift and go to state 9
    if_statement                   shift and go to state 10
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    function_definition            shift and go to state 13
    function_call                  shift and go to state 14
    return_statement               shift and go to state 15
    expression                     shift and go to state 16
    type                           shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . include_statement
    (5) statement -> . using_namespace
    (6) statement -> . declaration
    (7) statement -> . assignment
    (8) statement -> . cout_statement
    (9) statement -> . cin_statement
    (10) statement -> . if_statement
    (11) statement -> . while_statement
    (12) statement -> . for_statement
    (13) statement -> . function_definition
    (14) statement -> . function_call
    (15) statement -> . return_statement
    (16) statement -> . expression SEMICOLON
    (17) include_statement -> . INCLUDE LESS IOSTREAM GREATER
    (18) using_namespace -> . USING NAMESPACE STD SEMICOLON
    (19) declaration -> . type declarator_list SEMICOLON
    (28) assignment -> . IDENTIFIER EQUALS expression SEMICOLON
    (29) cout_statement -> . COUT LEFTSHIFT cout_args SEMICOLON
    (32) cin_statement -> . CIN RIGHTSHIFT cin_args SEMICOLON
    (35) if_statement -> . IF LPAREN expression RPAREN compound_statement
    (36) if_statement -> . IF LPAREN expression RPAREN compound_statement ELSE compound_statement
    (37) while_statement -> . WHILE LPAREN expression RPAREN compound_statement
    (38) for_statement -> . FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_statement
    (39) for_statement -> . FOR LPAREN declaration expression SEMICOLON expression RPAREN compound_statement
    (41) function_definition -> . type IDENTIFIER LPAREN parameters RPAREN compound_statement
    (45) function_call -> . IDENTIFIER LPAREN arguments RPAREN SEMICOLON
    (49) return_statement -> . RETURN expression SEMICOLON
    (50) expression -> . IDENTIFIER
    (51) expression -> . NUMBER
    (52) expression -> . STRING_LITERAL
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression TIMES expression
    (56) expression -> . expression DIVIDE expression
    (57) expression -> . expression LESS expression
    (58) expression -> . expression GREATER expression
    (59) expression -> . expression LESSEQUAL expression
    (60) expression -> . expression GREATEREQUAL expression
    (61) expression -> . LPAREN expression RPAREN
    (24) type -> . INT
    (25) type -> . FLOAT
    (26) type -> . STRING
    (27) type -> . VOID

    $end            reduce using rule 1 (program -> statements .)
    INCLUDE         shift and go to state 17
    USING           shift and go to state 18
    IDENTIFIER      shift and go to state 20
    COUT            shift and go to state 21
    CIN             shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 25
    FOR             shift and go to state 26
    RETURN          shift and go to state 27
    NUMBER          shift and go to state 28
    STRING_LITERAL  shift and go to state 29
    LPAREN          shift and go to state 24
    INT             shift and go to state 30
    FLOAT           shift and go to state 31
    STRING          shift and go to state 32
    VOID            shift and go to state 33

    statement                      shift and go to state 34
    include_statement              shift and go to state 4
    using_namespace                shift and go to state 5
    declaration                    shift and go to state 6
    assignment                     shift and go to state 7
    cout_statement                 shift and go to state 8
    cin_statement                  shift and go to state 9
    if_statement                   shift and go to state 10
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    function_definition            shift and go to state 13
    function_call                  shift and go to state 14
    return_statement               shift and go to state 15
    expression                     shift and go to state 16
    type                           shift and go to state 19

state 3

    (2) statements -> statement .

    INCLUDE         reduce using rule 2 (statements -> statement .)
    USING           reduce using rule 2 (statements -> statement .)
    IDENTIFIER      reduce using rule 2 (statements -> statement .)
    COUT            reduce using rule 2 (statements -> statement .)
    CIN             reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    RETURN          reduce using rule 2 (statements -> statement .)
    NUMBER          reduce using rule 2 (statements -> statement .)
    STRING_LITERAL  reduce using rule 2 (statements -> statement .)
    LPAREN          reduce using rule 2 (statements -> statement .)
    INT             reduce using rule 2 (statements -> statement .)
    FLOAT           reduce using rule 2 (statements -> statement .)
    STRING          reduce using rule 2 (statements -> statement .)
    VOID            reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    RBRACE          reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> include_statement .

    INCLUDE         reduce using rule 4 (statement -> include_statement .)
    USING           reduce using rule 4 (statement -> include_statement .)
    IDENTIFIER      reduce using rule 4 (statement -> include_statement .)
    COUT            reduce using rule 4 (statement -> include_statement .)
    CIN             reduce using rule 4 (statement -> include_statement .)
    IF              reduce using rule 4 (statement -> include_statement .)
    WHILE           reduce using rule 4 (statement -> include_statement .)
    FOR             reduce using rule 4 (statement -> include_statement .)
    RETURN          reduce using rule 4 (statement -> include_statement .)
    NUMBER          reduce using rule 4 (statement -> include_statement .)
    STRING_LITERAL  reduce using rule 4 (statement -> include_statement .)
    LPAREN          reduce using rule 4 (statement -> include_statement .)
    INT             reduce using rule 4 (statement -> include_statement .)
    FLOAT           reduce using rule 4 (statement -> include_statement .)
    STRING          reduce using rule 4 (statement -> include_statement .)
    VOID            reduce using rule 4 (statement -> include_statement .)
    $end            reduce using rule 4 (statement -> include_statement .)
    RBRACE          reduce using rule 4 (statement -> include_statement .)


state 5

    (5) statement -> using_namespace .

    INCLUDE         reduce using rule 5 (statement -> using_namespace .)
    USING           reduce using rule 5 (statement -> using_namespace .)
    IDENTIFIER      reduce using rule 5 (statement -> using_namespace .)
    COUT            reduce using rule 5 (statement -> using_namespace .)
    CIN             reduce using rule 5 (statement -> using_namespace .)
    IF              reduce using rule 5 (statement -> using_namespace .)
    WHILE           reduce using rule 5 (statement -> using_namespace .)
    FOR             reduce using rule 5 (statement -> using_namespace .)
    RETURN          reduce using rule 5 (statement -> using_namespace .)
    NUMBER          reduce using rule 5 (statement -> using_namespace .)
    STRING_LITERAL  reduce using rule 5 (statement -> using_namespace .)
    LPAREN          reduce using rule 5 (statement -> using_namespace .)
    INT             reduce using rule 5 (statement -> using_namespace .)
    FLOAT           reduce using rule 5 (statement -> using_namespace .)
    STRING          reduce using rule 5 (statement -> using_namespace .)
    VOID            reduce using rule 5 (statement -> using_namespace .)
    $end            reduce using rule 5 (statement -> using_namespace .)
    RBRACE          reduce using rule 5 (statement -> using_namespace .)


state 6

    (6) statement -> declaration .

    INCLUDE         reduce using rule 6 (statement -> declaration .)
    USING           reduce using rule 6 (statement -> declaration .)
    IDENTIFIER      reduce using rule 6 (statement -> declaration .)
    COUT            reduce using rule 6 (statement -> declaration .)
    CIN             reduce using rule 6 (statement -> declaration .)
    IF              reduce using rule 6 (statement -> declaration .)
    WHILE           reduce using rule 6 (statement -> declaration .)
    FOR             reduce using rule 6 (statement -> declaration .)
    RETURN          reduce using rule 6 (statement -> declaration .)
    NUMBER          reduce using rule 6 (statement -> declaration .)
    STRING_LITERAL  reduce using rule 6 (statement -> declaration .)
    LPAREN          reduce using rule 6 (statement -> declaration .)
    INT             reduce using rule 6 (statement -> declaration .)
    FLOAT           reduce using rule 6 (statement -> declaration .)
    STRING          reduce using rule 6 (statement -> declaration .)
    VOID            reduce using rule 6 (statement -> declaration .)
    $end            reduce using rule 6 (statement -> declaration .)
    RBRACE          reduce using rule 6 (statement -> declaration .)


state 7

    (7) statement -> assignment .

    INCLUDE         reduce using rule 7 (statement -> assignment .)
    USING           reduce using rule 7 (statement -> assignment .)
    IDENTIFIER      reduce using rule 7 (statement -> assignment .)
    COUT            reduce using rule 7 (statement -> assignment .)
    CIN             reduce using rule 7 (statement -> assignment .)
    IF              reduce using rule 7 (statement -> assignment .)
    WHILE           reduce using rule 7 (statement -> assignment .)
    FOR             reduce using rule 7 (statement -> assignment .)
    RETURN          reduce using rule 7 (statement -> assignment .)
    NUMBER          reduce using rule 7 (statement -> assignment .)
    STRING_LITERAL  reduce using rule 7 (statement -> assignment .)
    LPAREN          reduce using rule 7 (statement -> assignment .)
    INT             reduce using rule 7 (statement -> assignment .)
    FLOAT           reduce using rule 7 (statement -> assignment .)
    STRING          reduce using rule 7 (statement -> assignment .)
    VOID            reduce using rule 7 (statement -> assignment .)
    $end            reduce using rule 7 (statement -> assignment .)
    RBRACE          reduce using rule 7 (statement -> assignment .)


state 8

    (8) statement -> cout_statement .

    INCLUDE         reduce using rule 8 (statement -> cout_statement .)
    USING           reduce using rule 8 (statement -> cout_statement .)
    IDENTIFIER      reduce using rule 8 (statement -> cout_statement .)
    COUT            reduce using rule 8 (statement -> cout_statement .)
    CIN             reduce using rule 8 (statement -> cout_statement .)
    IF              reduce using rule 8 (statement -> cout_statement .)
    WHILE           reduce using rule 8 (statement -> cout_statement .)
    FOR             reduce using rule 8 (statement -> cout_statement .)
    RETURN          reduce using rule 8 (statement -> cout_statement .)
    NUMBER          reduce using rule 8 (statement -> cout_statement .)
    STRING_LITERAL  reduce using rule 8 (statement -> cout_statement .)
    LPAREN          reduce using rule 8 (statement -> cout_statement .)
    INT             reduce using rule 8 (statement -> cout_statement .)
    FLOAT           reduce using rule 8 (statement -> cout_statement .)
    STRING          reduce using rule 8 (statement -> cout_statement .)
    VOID            reduce using rule 8 (statement -> cout_statement .)
    $end            reduce using rule 8 (statement -> cout_statement .)
    RBRACE          reduce using rule 8 (statement -> cout_statement .)


state 9

    (9) statement -> cin_statement .

    INCLUDE         reduce using rule 9 (statement -> cin_statement .)
    USING           reduce using rule 9 (statement -> cin_statement .)
    IDENTIFIER      reduce using rule 9 (statement -> cin_statement .)
    COUT            reduce using rule 9 (statement -> cin_statement .)
    CIN             reduce using rule 9 (statement -> cin_statement .)
    IF              reduce using rule 9 (statement -> cin_statement .)
    WHILE           reduce using rule 9 (statement -> cin_statement .)
    FOR             reduce using rule 9 (statement -> cin_statement .)
    RETURN          reduce using rule 9 (statement -> cin_statement .)
    NUMBER          reduce using rule 9 (statement -> cin_statement .)
    STRING_LITERAL  reduce using rule 9 (statement -> cin_statement .)
    LPAREN          reduce using rule 9 (statement -> cin_statement .)
    INT             reduce using rule 9 (statement -> cin_statement .)
    FLOAT           reduce using rule 9 (statement -> cin_statement .)
    STRING          reduce using rule 9 (statement -> cin_statement .)
    VOID            reduce using rule 9 (statement -> cin_statement .)
    $end            reduce using rule 9 (statement -> cin_statement .)
    RBRACE          reduce using rule 9 (statement -> cin_statement .)


state 10

    (10) statement -> if_statement .

    INCLUDE         reduce using rule 10 (statement -> if_statement .)
    USING           reduce using rule 10 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 10 (statement -> if_statement .)
    COUT            reduce using rule 10 (statement -> if_statement .)
    CIN             reduce using rule 10 (statement -> if_statement .)
    IF              reduce using rule 10 (statement -> if_statement .)
    WHILE           reduce using rule 10 (statement -> if_statement .)
    FOR             reduce using rule 10 (statement -> if_statement .)
    RETURN          reduce using rule 10 (statement -> if_statement .)
    NUMBER          reduce using rule 10 (statement -> if_statement .)
    STRING_LITERAL  reduce using rule 10 (statement -> if_statement .)
    LPAREN          reduce using rule 10 (statement -> if_statement .)
    INT             reduce using rule 10 (statement -> if_statement .)
    FLOAT           reduce using rule 10 (statement -> if_statement .)
    STRING          reduce using rule 10 (statement -> if_statement .)
    VOID            reduce using rule 10 (statement -> if_statement .)
    $end            reduce using rule 10 (statement -> if_statement .)
    RBRACE          reduce using rule 10 (statement -> if_statement .)


state 11

    (11) statement -> while_statement .

    INCLUDE         reduce using rule 11 (statement -> while_statement .)
    USING           reduce using rule 11 (statement -> while_statement .)
    IDENTIFIER      reduce using rule 11 (statement -> while_statement .)
    COUT            reduce using rule 11 (statement -> while_statement .)
    CIN             reduce using rule 11 (statement -> while_statement .)
    IF              reduce using rule 11 (statement -> while_statement .)
    WHILE           reduce using rule 11 (statement -> while_statement .)
    FOR             reduce using rule 11 (statement -> while_statement .)
    RETURN          reduce using rule 11 (statement -> while_statement .)
    NUMBER          reduce using rule 11 (statement -> while_statement .)
    STRING_LITERAL  reduce using rule 11 (statement -> while_statement .)
    LPAREN          reduce using rule 11 (statement -> while_statement .)
    INT             reduce using rule 11 (statement -> while_statement .)
    FLOAT           reduce using rule 11 (statement -> while_statement .)
    STRING          reduce using rule 11 (statement -> while_statement .)
    VOID            reduce using rule 11 (statement -> while_statement .)
    $end            reduce using rule 11 (statement -> while_statement .)
    RBRACE          reduce using rule 11 (statement -> while_statement .)


state 12

    (12) statement -> for_statement .

    INCLUDE         reduce using rule 12 (statement -> for_statement .)
    USING           reduce using rule 12 (statement -> for_statement .)
    IDENTIFIER      reduce using rule 12 (statement -> for_statement .)
    COUT            reduce using rule 12 (statement -> for_statement .)
    CIN             reduce using rule 12 (statement -> for_statement .)
    IF              reduce using rule 12 (statement -> for_statement .)
    WHILE           reduce using rule 12 (statement -> for_statement .)
    FOR             reduce using rule 12 (statement -> for_statement .)
    RETURN          reduce using rule 12 (statement -> for_statement .)
    NUMBER          reduce using rule 12 (statement -> for_statement .)
    STRING_LITERAL  reduce using rule 12 (statement -> for_statement .)
    LPAREN          reduce using rule 12 (statement -> for_statement .)
    INT             reduce using rule 12 (statement -> for_statement .)
    FLOAT           reduce using rule 12 (statement -> for_statement .)
    STRING          reduce using rule 12 (statement -> for_statement .)
    VOID            reduce using rule 12 (statement -> for_statement .)
    $end            reduce using rule 12 (statement -> for_statement .)
    RBRACE          reduce using rule 12 (statement -> for_statement .)


state 13

    (13) statement -> function_definition .

    INCLUDE         reduce using rule 13 (statement -> function_definition .)
    USING           reduce using rule 13 (statement -> function_definition .)
    IDENTIFIER      reduce using rule 13 (statement -> function_definition .)
    COUT            reduce using rule 13 (statement -> function_definition .)
    CIN             reduce using rule 13 (statement -> function_definition .)
    IF              reduce using rule 13 (statement -> function_definition .)
    WHILE           reduce using rule 13 (statement -> function_definition .)
    FOR             reduce using rule 13 (statement -> function_definition .)
    RETURN          reduce using rule 13 (statement -> function_definition .)
    NUMBER          reduce using rule 13 (statement -> function_definition .)
    STRING_LITERAL  reduce using rule 13 (statement -> function_definition .)
    LPAREN          reduce using rule 13 (statement -> function_definition .)
    INT             reduce using rule 13 (statement -> function_definition .)
    FLOAT           reduce using rule 13 (statement -> function_definition .)
    STRING          reduce using rule 13 (statement -> function_definition .)
    VOID            reduce using rule 13 (statement -> function_definition .)
    $end            reduce using rule 13 (statement -> function_definition .)
    RBRACE          reduce using rule 13 (statement -> function_definition .)


state 14

    (14) statement -> function_call .

    INCLUDE         reduce using rule 14 (statement -> function_call .)
    USING           reduce using rule 14 (statement -> function_call .)
    IDENTIFIER      reduce using rule 14 (statement -> function_call .)
    COUT            reduce using rule 14 (statement -> function_call .)
    CIN             reduce using rule 14 (statement -> function_call .)
    IF              reduce using rule 14 (statement -> function_call .)
    WHILE           reduce using rule 14 (statement -> function_call .)
    FOR             reduce using rule 14 (statement -> function_call .)
    RETURN          reduce using rule 14 (statement -> function_call .)
    NUMBER          reduce using rule 14 (statement -> function_call .)
    STRING_LITERAL  reduce using rule 14 (statement -> function_call .)
    LPAREN          reduce using rule 14 (statement -> function_call .)
    INT             reduce using rule 14 (statement -> function_call .)
    FLOAT           reduce using rule 14 (statement -> function_call .)
    STRING          reduce using rule 14 (statement -> function_call .)
    VOID            reduce using rule 14 (statement -> function_call .)
    $end            reduce using rule 14 (statement -> function_call .)
    RBRACE          reduce using rule 14 (statement -> function_call .)


state 15

    (15) statement -> return_statement .

    INCLUDE         reduce using rule 15 (statement -> return_statement .)
    USING           reduce using rule 15 (statement -> return_statement .)
    IDENTIFIER      reduce using rule 15 (statement -> return_statement .)
    COUT            reduce using rule 15 (statement -> return_statement .)
    CIN             reduce using rule 15 (statement -> return_statement .)
    IF              reduce using rule 15 (statement -> return_statement .)
    WHILE           reduce using rule 15 (statement -> return_statement .)
    FOR             reduce using rule 15 (statement -> return_statement .)
    RETURN          reduce using rule 15 (statement -> return_statement .)
    NUMBER          reduce using rule 15 (statement -> return_statement .)
    STRING_LITERAL  reduce using rule 15 (statement -> return_statement .)
    LPAREN          reduce using rule 15 (statement -> return_statement .)
    INT             reduce using rule 15 (statement -> return_statement .)
    FLOAT           reduce using rule 15 (statement -> return_statement .)
    STRING          reduce using rule 15 (statement -> return_statement .)
    VOID            reduce using rule 15 (statement -> return_statement .)
    $end            reduce using rule 15 (statement -> return_statement .)
    RBRACE          reduce using rule 15 (statement -> return_statement .)


state 16

    (16) statement -> expression . SEMICOLON
    (53) expression -> expression . PLUS expression
    (54) expression -> expression . MINUS expression
    (55) expression -> expression . TIMES expression
    (56) expression -> expression . DIVIDE expression
    (57) expression -> expression . LESS expression
    (58) expression -> expression . GREATER expression
    (59) expression -> expression . LESSEQUAL expression
    (60) expression -> expression . GREATEREQUAL expression

    SEMICOLON       shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    LESS            shift and go to state 40
    GREATER         shift and go to state 41
    LESSEQUAL       shift and go to state 42
    GREATEREQUAL    shift and go to state 43


state 17

    (17) include_statement -> INCLUDE . LESS IOSTREAM GREATER

    LESS            shift and go to state 44


state 18

    (18) using_namespace -> USING . NAMESPACE STD SEMICOLON

    NAMESPACE       shift and go to state 45


state 19

    (19) declaration -> type . declarator_list SEMICOLON
    (41) function_definition -> type . IDENTIFIER LPAREN parameters RPAREN compound_statement
    (20) declarator_list -> . declarator
    (21) declarator_list -> . declarator COMMA declarator_list
    (22) declarator -> . IDENTIFIER
    (23) declarator -> . IDENTIFIER EQUALS expression

    IDENTIFIER      shift and go to state 47

    declarator_list                shift and go to state 46
    declarator                     shift and go to state 48

state 20

    (28) assignment -> IDENTIFIER . EQUALS expression SEMICOLON
    (45) function_call -> IDENTIFIER . LPAREN arguments RPAREN SEMICOLON
    (50) expression -> IDENTIFIER .

    EQUALS          shift and go to state 49
    LPAREN          shift and go to state 50
    SEMICOLON       reduce using rule 50 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 50 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 50 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 50 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 50 (expression -> IDENTIFIER .)
    LESS            reduce using rule 50 (expression -> IDENTIFIER .)
    GREATER         reduce using rule 50 (expression -> IDENTIFIER .)
    LESSEQUAL       reduce using rule 50 (expression -> IDENTIFIER .)
    GREATEREQUAL    reduce using rule 50 (expression -> IDENTIFIER .)


state 21

    (29) cout_statement -> COUT . LEFTSHIFT cout_args SEMICOLON

    LEFTSHIFT       shift and go to state 51


state 22

    (32) cin_statement -> CIN . RIGHTSHIFT cin_args SEMICOLON

    RIGHTSHIFT      shift and go to state 52


state 23

    (35) if_statement -> IF . LPAREN expression RPAREN compound_statement
    (36) if_statement -> IF . LPAREN expression RPAREN compound_statement ELSE compound_statement

    LPAREN          shift and go to state 53


state 24

    (61) expression -> LPAREN . expression RPAREN
    (50) expression -> . IDENTIFIER
    (51) expression -> . NUMBER
    (52) expression -> . STRING_LITERAL
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression TIMES expression
    (56) expression -> . expression DIVIDE expression
    (57) expression -> . expression LESS expression
    (58) expression -> . expression GREATER expression
    (59) expression -> . expression LESSEQUAL expression
    (60) expression -> . expression GREATEREQUAL expression
    (61) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 55
    NUMBER          shift and go to state 28
    STRING_LITERAL  shift and go to state 29
    LPAREN          shift and go to state 24

    expression                     shift and go to state 54

state 25

    (37) while_statement -> WHILE . LPAREN expression RPAREN compound_statement

    LPAREN          shift and go to state 56


state 26

    (38) for_statement -> FOR . LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN compound_statement
    (39) for_statement -> FOR . LPAREN declaration expression SEMICOLON expression RPAREN compound_statement

    LPAREN          shift and go to state 57


state 27

    (49) return_statement -> RETURN . expression SEMICOLON
    (50) expression -> . IDENTIFIER
    (51) expression -> . NUMBER
    (52) expression -> . STRING_LITERAL
    (53) expression -> . expression PLUS expression
    (54) expression -> . expression MINUS expression
    (55) expression -> . expression TIMES expression
    (56) expression -> . expression DIVIDE expression
    (57) expression -> . expression LESS expression
    (58) expression -> . expression GREATER expression
    (59) expression -> . expression LESSEQUAL expression
    (60) expression -> . expression GREATEREQUAL expression
    (61) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 55
    NUMBER          shift and go to state 28
    STRING_LITERAL  shift and go to state 29
    LPAREN          shift and go to state 24

    expression                     shift and go to state 58

state 28

    (51) expression -> NUMBER .

    SEMICOLON       reduce using rule 51 (expression -> NUMBER .)
    PLUS            reduce using rule 51 (expression -> NUMBER .)
    MINUS           reduce using rule 51 (expression -> NUMBER .)
    TIMES           reduce using rule 51 (expression -> NUMBER .)
    DIVIDE          reduce using rule 51 (expression -> NUMBER .)
    LESS            reduce using rule 51 (expression -> NUMBER .)
    GREATER         reduce using rule 51 (expression -> NUMBER .)
    LESSEQUAL       reduce using rule 51 (expression -> NUMBER .)
    GREATEREQUAL    reduce using rule 51 (expression -> NUMBER .)
    RPAREN          reduce using rule 51 (expression -> NUMBER .)
    COMMA           reduce using rule 51 (expression -> NUMBER .)
    LEFTSHIFT       reduce using rule 51 (expression -> NUMBER .)


state 29

    (52) expression -> STRING_LITERAL .

    SEMICOLON       reduce using rule 52 (expression -> STRING_LITERAL .)
    PLUS            reduce using rule 52 (expression -> STRING_LITERAL .)
    MINUS           reduce using rule 52 (expression -> STRING_LITERAL .)
    TIMES           reduce using rule 52 (expression -> STRING_LITERAL .)
    DIVIDE          reduce using rule 52 (expression -> STRING_LITERAL .)
    LESS            reduce using rule 52 (expression -> STRING_LITERAL .)
    GREATER         reduce using rule 52 (expression -> STRING_LITERAL .)
    LESSEQUAL       reduce using rule 52 (expression -> STRING_LITERAL .)
    GREATEREQUAL    reduce using rule 52 (expression -> STRING_LITERAL .)
    RPAREN          reduce using rule 52 (expression -> STRING_LITERAL .)
    COMMA           reduce using rule 52 (expression -> STRING_LITERAL .)
    LEFTSHIFT       reduce using rule 52 (expression -> STRING_LITERAL .)


state 30

    (24) type -> INT .

    IDENTIFIER      reduce using rule 24 (type -> INT .)


state 31

    (25) type -> FLOAT .

    IDENTIFIER      reduce using rule 25 (type -> FLOAT .)


state 32

    (26) type -> STRING .
